about me section css fixed and aligned for mobile

--- a/portfolio/src/components/about/about.css
+++ b/portfolio/src/components/about/about.css
@@ -1,10 +1,10 @@
 .about-container {
-  position: relative;
+  /* position: relative; */
   /* top: 300px; */
   /* padding: 2em; */
-  height: 100%;
+  /* height: 100%;
   width: 100%;
-  background: chocolate;
+  background: chocolate; */
 }
 /* .image {
   position: absolute;
