--- a/portfolio/src/components/projects/projects.css
+++ b/portfolio/src/components/projects/projects.css
@@ -1,9 +1,8 @@
 .project-container {
-  position: relative;
+  /* position: relative;
   background: coral;
   padding: 0px;
-  margin: 0px;
-  border-top: ;
+  margin: 0px; */
 }
 /* ///kcal css//////// */
 /* .section-header {
