--- a/portfolio/src/index.css
+++ b/portfolio/src/index.css
@@ -1,16 +1,72 @@
+:root {
+  --clr-text: #5a5a5a;
+  --clr-primary: #067e0a;
+  --clr-accent: #fac535;
+
+  --ff-serif: 'Crimson Text', serif;
+  --ff-logo: 'Betterfly', sans-serif;
+}
+*::after {
+  box-sizing: inherit;
+}
+
 html {
-  font-size: 16px;
+  box-sizing: border-box;
+  font-size: 1.125rem;
+  font-family: var(--ff-serif);
+  color: var(--clr-text);
 }
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu',
-    'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  /* overflow-y: hidden; */
-  /* overflow-x: hidden; */
+}
+img {
+  display: block;
+  max-width: 100%;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
+h1 {
+  /* font-family: var(--ff-title); */
+  line-height: 1;
+  font-size: 2.5rem;
+  text-align: center;
+  padding: 1vh 0.5em;
+}
+h1,
+h2,
+h3,
+h4,
+p {
+  margin: 0;
+}
+p {
+  text-align: center;
+  margin-bottom: 0.85rem;
+}
+/* navigation */
+nav ul {
+  display: flex;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  justify-content: space-around;
+}
+nav a {
+  display: inline-block;
+  padding: 0.5em;
+  color: var(--clr-primary);
+  text-decoration: none;
+}
+nav a:hover,
+nav a:focus {
+  color: var(--clr-accent);
+  text-decoration: underline;
+}
+
+/* buttons */
+
+/* about me styles */
+.about-container {
+  position: relative;
+  top: -30px;
+  padding-bottom: 3em;
 }
